# telegram-auto

./: .gitignore  README.md  pyproject.toml
src/telegram_auto/: __init__.py  cli.py
