[project]
name = "telegram-auto"
version = "0.1.0"
description = "JSON-first Telegram automation CLI built on Telethon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pysocks>=1.7.1",
    "python-dotenv>=1.2.2",
    "telethon>=1.42.0",
]

[project.scripts]
telegram-auto = "telegram_auto.cli:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"
